增加会员中心

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -73,7 +73,7 @@
 		    </a>
 		  </li>
 		  <li>
-		    <a href="###" class="">
+		    <a href="{:U('Member/index')}" class="">
 		          <span class="am-icon-user"></span>
 		        <span class="am-navbar-label">会员中心</span>
 		    </a>
