修改登陆显示

--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -101,7 +101,7 @@ function choose_bg() {
     <div class="setting"><a href="javascript:;" onclick="choose_bg();" title="更换背景"><span class="glyphicon glyphicon-th-large"></span></a></div>
 	<div class="login_box">
         <div class="login_logo">
-            <h2>懒得出门后台管理</h2>
+            <h2>后台管理</h2>
         </div>
         <div class="login_form">
     		<form action="{:U('checkLogin')}" name="frmlogin" id="login_form" method="post">
