--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -17,7 +17,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<!-- Tile icon for Win8 (144x144 + tile color) -->
 	<meta name="msapplication-TileColor" content="#0e90d2">
-	<title>index</title>
+	<title>免费VIP账号领取</title>
 
 </head>
 <body>
