--- a/Application/Home/View/Member/index.html
+++ b/Application/Home/View/Member/index.html
@@ -37,7 +37,7 @@
         </h1>
     </header>
     <div class="usertop">
-        <img src="http://h.hiphotos.baidu.com/zhidao/pic/item/ca1349540923dd5499b95d0ad509b3de9d82488e.jpg">
+        <img src="__PUBLIC__/assets/image/bg.jpg">
         <div class="userbox">
             <img src="__ROOT__/Uploads{$memberInfo.head}">
             <p>{$memberInfo.phone}</p>
