--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -152,7 +152,7 @@ function MainMenuClick(event, treeId, treeNode) {
             <button type="button" class="bjui-navbar-toggle btn-default" data-toggle="collapse" data-target="#bjui-navbar-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a href="#"><!-- <img src="__PUBLIC__/images/logo.png"> --><h5 style="color:#fff; padding:0 10px; font-size:16px">懒得出门管理后台V1.0</h4></a>
+            <a href="#"><!-- <img src="__PUBLIC__/images/logo.png"> --><h5 style="color:#fff; padding:0 10px; font-size:16px">管理后台V1.0</h4></a>
         </div>
         <nav id="bjui-navbar-collapse">
             <ul class="bjui-navbar-right">
